tests/spec/compile-pass/032_integer_overflow_methods.zn
// category: compile-pass
// profile: freestanding
// purpose: integer arithmetic has wrapping defaults and explicit overflow methods

module tests.pass.integerOverflowMethods;

fn wrappingAdd() -> U8 {
    let a: U8 = 250;
    let b: U8 = 10;
    return a + b;
}

fn checkedOverflow() -> Bool {
    let a: U8 = 250;
    let b: U8 = 10;
    return match a.checkedAdd(b) {
        Some(_) => false,
        None => true,
    };
}

fn saturatingAdd() -> U8 {
    let a: U8 = 250;
    let b: U8 = 10;
    return a.saturatingAdd(b);
}

fn overflowingAdd() -> Bool {
    let a: U8 = 250;
    let b: U8 = 10;
    let (value, overflowed) = a.overflowingAdd(b);
    let ignored = value;
    return overflowed;
}
